@@ -532,6 +532,7 @@
 	- added command_to_argv() to common.c
 	- try to rename the output folder until it succeeded
 	- added option "use_gdb" to perform each run within gdb (most of the code was already there, but disabled)
+	- moved "ramoption" parsing into APP_MESS block
 	
 	create_report
 	- added a summary at the end when "dokuwiki_format" is set
